<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_title">HSR Timetable</string>
    <string name="app_name">HSR Timetable</string>
    <string name="button_go">Go</string>
    <string name="label_login">Login</string>
    <string name="label_passord">Password</string>
    <string name="label_requestDate">Date</string>
    <string name="menu_preferences">Preferences</string>
    <string name="preferences_login_credentials">Login Credentials</string>
    <string name="preferences_login">HSR Login</string>
    <string name="preferences_password">Password</string>
    <string name="menu_refresh">Refresh</string>
    <string name="preferences_password_text">Your password will only be sent to the HSR server.</string>
    <string name="key_login">login</string>
    <string name="key_password">password</string>
    <string name="label_date_label">Date:</string>
    <string name="default_novalue">-</string>
    <string name="button_prev">Prev</string>
    <string name="button_next">Next</string>
    <string name="button_today">Today</string>
</resources>
