<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_height="wrap_content" style="@style/app_title"
		android:layout_width="wrap_content" android:text="@string/app_title" android:id="@+id/title"></TextView>
	<LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dip" android:text="@string/label_date_label" android:id="@+id/date_label"></TextView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dip" android:id="@+id/date_value" android:text="@string/default_novalue"></TextView>
		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="top" android:text="@string/button_prev" android:id="@+id/button_prev" android:onClick="showPrevDay"></Button>
		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/button_today" android:text="@string/button_today" android:onClick="showToday"></Button>
		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="right" android:text="@string/button_next" android:id="@+id/button_next" android:onClick="showNextDay"></Button>
	</LinearLayout>
	<ScrollView android:layout_width="match_parent" android:id="@+id/scrollView1" android:layout_height="wrap_content">
		<LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="match_parent">
			<TextView android:layout_width="wrap_content" android:layout_margin="5dip" android:id="@+id/result" android:layout_height="wrap_content" android:text="@string/default_novalue"></TextView>
		</LinearLayout>
	</ScrollView>

</LinearLayout>
